--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <meta property="twitter:image" content="/og-image.png" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="/slogo.png" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
   <!-- Preconnect for Fonts -->
