Added google analytics

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8F6WDNS4HE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-8F6WDNS4HE');
+  </script>
+
   <!-- Primary Meta Tags -->
   <title>Nikhil Kumar | DevOps Cloud Engineer</title>
   <meta name="title" content="Nikhil Kumar | DevOps Cloud Engineer" />
