Set default theme to light

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     media="print" onload="this.media='all'" />
 
   <!-- Theme Color -->
-  <meta name="theme-color" content="#0B0F19" />
+  <meta name="theme-color" content="#FFFFFF" />
 </head>
 
 <body>
